--- a/app/templates/cases/case/subcases/subcase/index.hbs
+++ b/app/templates/cases/case/subcases/subcase/index.hbs
@@ -1,40 +1,136 @@
 {{#if this.model}}
-<Subcase::SubcaseDescriptionPanel @subcase={{@model.subcase}} />
-<div class="auk-u-mb-8">
-  <div class="auk-hr">
-    <hr />
+  <div id="case" {{did-insert this.observeElement}}>
+    <Subcase::SubcaseTitlesPanel
+      @subcase={{@model.subcase}}
+      @meeting={{this.meeting}}
+      @allowEditing={{user-may "manage-cases"}}
+    />
   </div>
-</div>
-{{#if (user-may "manage-cases")}}
-  <AuCheckbox
-    data-test-cases---subcase-overview-confidentiality-checkbox={{true}}
-    @checked={{@model.subcase.confidential}}
-    @disabled={{true}}
-  >
-    {{t "limited-access"}}
-  </AuCheckbox>
+  <Mandatees::MandateesPanel
+    @referenceDate={{if
+      this.meeting
+      this.meeting.plannedStart
+      this.model.subcase.created
+    }}
+    @mandatees={{this.mandatees}}
+    @submitter={{this.submitter}}
+    @emptyStateMessage={{if this.showMandateesNotApplicableMessage (t "not-applicable")}}
+    @allowEditing={{user-may "manage-cases"}}
+    @onSave={{this.saveMandateeData}}
+  />
+  <Utils::GovernmentAreas::GovernmentAreasPanel
+    @referenceDate={{or this.meeting.plannedStart this.agenda.created @model.subcase.created}}
+    @governmentAreas={{@model.subcase.governmentAreas}}
+    @allowEditing={{user-may "manage-cases"}}
+    @onSave={{this.saveGovernmentAreas}}
+  />
+
+  {{!-- Documents --}}
+  <div id="documents" class="auk-u-mb-4" {{did-insert this.observeElement}}>
+    <Auk::Panel data-test-subcase-description-panel>
+      <Auk::Panel::Header>
+        <Auk::Toolbar>
+          <Auk::Toolbar::Group @position="left">
+            <Auk::Toolbar::Item>
+              <div class="au-u-flex au-u-flex--spaced-small">
+                <h4 class="auk-panel__title">
+                  {{t "documents"}}
+                </h4>
+                <AuPill
+                  @size="small"
+                  @skin="border"
+                  @icon="comment"
+                >
+                  <EmberTooltip @side="bottom" @tooltipClass="tooltip-custom">
+                    {{t "filtered-subcase-documents"}}
+                  </EmberTooltip>
+                </AuPill>
+              </div>
+            </Auk::Toolbar::Item>
+          </Auk::Toolbar::Group>
+        </Auk::Toolbar>
+      </Auk::Panel::Header>
+      <Auk::Panel::Body>
+        {{#if this.documentsAreVisible}}
+          <Documents::DocumentCardList
+            @pieces={{this.model.pieces}}
+            @onAddPiece={{perform this.addPiece}}
+            @didDeleteContainer={{this.refresh}}
+            @isEditable={{true}}
+          />
+        {{else}}
+          <div>
+            <AuAlert
+              @skin="info"
+              @icon="info-circle"
+              class="au-u-margin-bottom-none"
+            >
+              {{t "no-documents-yet"}}
+            </AuAlert>
+          </div>
+        {{/if}}
+      </Auk::Panel::Body>
+      {{#if (user-may "manage-documents")}}
+
+      <Auk::Panel::Footer>
+        <AuButton
+          data-test-route-cases---subcase-documents-add
+          @skin="naked"
+          @icon="plus"
+          class="au-u-padding-left-none"
+          {{on "click" this.openPieceUploadModal}}
+        >
+          {{t "documents-add"}}
+        </AuButton>
+      </Auk::Panel::Footer>
+      {{/if}}
+    </Auk::Panel>
+  </div>
+
+  <Documents::LinkedDocumentsPanel @agendaitemOrSubcase={{this.subcase}}/>
+
+  <div id="agenda" {{did-insert this.observeElement}}>
+    <Subcase::SubcaseAgendaPanel @subcase={{@model.subcase}} />
+  </div>
+
+  <Subcase::SubcaseVersionsPanel @subcase={{@model.subcase}} />
 {{/if}}
-<Subcase::SubcaseTitlesPanel
-  @subcase={{@model.subcase}}
-  @meeting={{this.meeting}}
-  @allowEditing={{user-may "manage-cases"}}
-/>
-<Mandatees::MandateesPanel
-  @referenceDate={{if
-    this.meeting
-    this.meeting.plannedStart
-    this.model.subcase.created
-  }}
-  @mandatees={{this.mandatees}}
-  @submitter={{this.submitter}}
-  @emptyStateMessage={{if this.showMandateesNotApplicableMessage (t "not-applicable")}}
-  @allowEditing={{user-may "manage-cases"}}
-  @onSave={{this.saveMandateeData}}
-/>
-<Utils::GovernmentAreas::GovernmentAreasPanel
-  @referenceDate={{or this.meeting.plannedStart this.agenda.created @model.subcase.created}}
-  @governmentAreas={{@model.subcase.governmentAreas}}
-  @allowEditing={{user-may "manage-cases"}}
-  @onSave={{this.saveGovernmentAreas}}
-/>
+
+<ConfirmationModal
+  @modalOpen={{this.isOpenPieceUploadModal}}
+  @title={{t "document-add"}}
+  @onConfirm={{perform this.savePieces}}
+  @onCancel={{perform this.cancelUploadPieces}}
+  @confirmMessage={{t "documents-add"}}
+  @disabled={{eq this.newPieces.length 0}}
+  @loading={{this.savePieces.isRunning}}
+>
+  <:body>
+    {{#if this.savePieces.isRunning}}
+      <WebComponents::VlLoader @text={{t "documents-loading-text"}} />
+    {{else}}
+      <Auk::FileUploader
+        @multiple={{true}}
+        @reusable={{true}}
+        @onUpload={{this.uploadPiece}}
+      />
+      <div class="upload-container">
+        {{#each this.newPieces as |piece|}}
+          <Documents::UploadedDocument
+            @piece={{piece}}
+            @allowDocumentContainerEdit={{true}}
+            @onDelete={{perform this.deletePiece piece}} />
+        {{/each}}
+      </div>
+    {{/if}}
+  </:body>
+</ConfirmationModal>
+
+{{#if this.isOpenBatchDetailsModal}}
+  <Documents::BatchDetails::BatchDocumentsDetailsModal
+    @pieces={{this.model.pieces}}
+    @didDeletePiece={{this.setPreviousPiecesFromAgendaitem}}
+    @onCancel={{this.cancelBatchDetails}}
+    @onSave={{this.saveBatchDetails}}
+  />
 {{/if}}
