--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -1,115 +1,170 @@
 {{page-title (t "cases")}}
 <Cases::CasesHeader @showArchivedOnly={{this.showArchivedOnly}} @didCreateNewCase={{this.navigateAfterCreate}} />
-<div class="auk-u-ml-4 auk-scroll-wrapper">
-  <KDataTable
-    data-test-route-cases-overview-data-table
-    @hoverable={{true}}
-    @scrollable={{true}}
-    @striped={{true}}
-    @clickable={{true}}
-    @loading={{this.isLoadingModel}}
-    @content={{this.model}}
-    @page={{this.page}}
-    @size={{this.size}}
-    @numberOfItems={{this.model.length}}
-    @totalNumberOfItems={{this.model.meta.count}}
-    @onChangeSize={{fn (mut this.size)}}
-    @onChangePage={{fn (mut this.page)}}
-  >
-    <:header>
-      <th class="auk-table__col--8">
-        {{t "case-name"}}
-      </th>
-      <Utils::ThSortable
-        class="auk-table__col--1"
-        @currentSorting={{this.sort}}
-        @field="opened"
-        @label={{t "created-on"}}
-        @onChange={{fn (mut this.sort)}}
-      />
-      <Utils::ThSortable
-        class="auk-table__col--1"
-        @currentSorting={{this.sort}}
-        @field="opened"
-        @label="Status"
-        @onChange={{fn (mut this.sort)}}
-      />
-      <th class="auk-table__col--1"></th>
-    </:header>
-    {{! Users explicitly want the whole row to be clickable instead of only the arrow at the end }}
-    {{! template-lint-disable no-invalid-interactive }}
-    <:body as |row|>
-      <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
-        <p data-test-route-cases-overview-row-case-title>
-          {{#if row.case.shortTitle}}
-            {{row.case.shortTitle}}
+<div class="auk-scroll-wrapper">
+  <div class="auk-scroll-wrapper__body">
+    {{#if this.model.length}}
+    <div class="auk-u-ml-4">
+      <table
+        data-test-route-cases-overview-data-table
+        class="auk-table auk-table--agenda auk-table--hoverable auk-table--sticky-header auk-table--sticky-action-column"
+      >
+        <thead>
+          <tr>
+            <Utils::ThSortable
+              class="auk-table__col--8 auk-table__header-title"
+              @currentSorting={{this.sort}}
+              @field="title"
+              @label={{t "created-on"}}
+              @onChange={{fn (mut this.sort)}}
+            />
+            <Utils::ThSortable
+              class="auk-table__header-title"
+              @currentSorting={{this.sort}}
+              @field="opened"
+              @label={{t "created-on"}}
+              @onChange={{fn (mut this.sort)}}
+            />
+            <Utils::ThSortable
+              class="auk-table__header-title"
+              @currentSorting={{this.sort}}
+              @field="isArchived"
+              @label="Status"
+              @onChange={{fn (mut this.sort)}}
+            />
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#if this.isLoadingModel}}
+            <tr>
+              <td
+                data-test-route-agendas-overview-loader
+                colspan="5"
+              >
+                {{t "loading"}}
+              </td>
+            </tr>
           {{else}}
-            {{row.case.title}}
+            {{#each @model as |row|}}
+              <tr
+                role="button"
+                class="auk-u-text-align--center auk-table--clickable-rows"
+                {{on "click" (fn this.navigateToDecisionmakingFlow row)}}
+              >
+                <td>
+                  <p data-test-route-cases-overview-row-case-title>
+                    {{#if row.case.shortTitle}}
+                      {{row.case.shortTitle}}
+                    {{else}}
+                      {{row.case.title}}
+                    {{/if}}
+                  </p>
+                </td>
+                <td>
+                  {{datetime row.opened}}
+                </td>
+                <td>
+                  {{#if row.case.isArchived}}
+                  <AuPill @size="small">Afgesloten</AuPill>
+                  {{else}}
+                  <AuPill @size="small" @skin="ongoing">Open</AuPill>
+                  {{/if}}
+                </td>
+                <td class="auk-u-text-align--right">
+                  {{!-- {{#if (user-may "manage-cases")}}
+                    <AuDropdown
+                      data-test-route-cases-overview-row-actions-dropdown
+                      @icon="three-dots"
+                      @title={{t "more"}}
+                      @hideText={{true}}
+                      @alignment="right"
+                    >
+                      <AuButton
+                        data-test-route-cases-overview-row-actions-edit
+                        @skin="link"
+                        {{on "click" (fn this.openEditCaseModal row.case)}}
+                        role="menuitem"
+                      >
+                        {{t "edit-case"}}
+                      </AuButton>
+                      <AuButton
+                        data-test-route-cases-overview-row-actions-archive
+                        @skin="link"
+                        @alert={{true}}
+                        {{on
+                          "click"
+                          (fn
+                            (if
+                              row.case.isArchived
+                              this.unarchiveCase
+                              this.requestArchiveCase
+                            )
+                            row.case
+                          )
+                        }}
+                        role="menuitem"
+                      >
+                        {{t (if row.case.isArchived "unarchive-case" "archive-case")}}
+                      </AuButton>
+                    </AuDropdown>
+                  {{/if}} --}}
+                  <AuLink
+                    @skin="button-naked"
+                    @icon="chevron-right"
+                    @hideText={{true}}
+                    @route="cases.case.subcases"
+                    @model={{row.id}}
+                  >
+                    {{t "open"}}
+                  </AuLink>
+                </td>
+              </tr>
+            {{/each}}
           {{/if}}
-        </p>
-      </td>
-      <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
-        {{datetime row.opened}}
-      </td>
-      <td>
-        {{#if row.case.isArchived}}
-        <AuPill @size="small">Afgesloten</AuPill>
-        {{else}}
-        <AuPill @size="small" @skin="ongoing">Open</AuPill>
-        {{/if}}
-      </td>
-      <td class="auk-u-text-align--right">
-        {{!-- {{#if (user-may "manage-cases")}}
-          <AuDropdown
-            data-test-route-cases-overview-row-actions-dropdown
-            @icon="three-dots"
-            @title={{t "more"}}
-            @hideText={{true}}
-            @alignment="right"
-          >
-            <AuButton
-              data-test-route-cases-overview-row-actions-edit
-              @skin="link"
-              {{on "click" (fn this.openEditCaseModal row.case)}}
-              role="menuitem"
-            >
-              {{t "edit-case"}}
-            </AuButton>
-            <AuButton
-              data-test-route-cases-overview-row-actions-archive
-              @skin="link"
-              @alert={{true}}
-              {{on
-                "click"
-                (fn
-                  (if
-                    row.case.isArchived
-                    this.unarchiveCase
-                    this.requestArchiveCase
-                  )
-                  row.case
-                )
-              }}
-              role="menuitem"
-            >
-              {{t (if row.case.isArchived "unarchive-case" "archive-case")}}
-            </AuButton>
-          </AuDropdown>
-        {{/if}} --}}
-        <AuLink
-          @skin="button-naked"
-          @icon="chevron-right"
-          @hideText={{true}}
-          @route="cases.case.subcases"
-          @model={{row.id}}
-        >
-          {{t "open"}}
-        </AuLink>
-      </td>
-    </:body>
-    {{! template-lint-enable no-invalid-interactive }}
-  </KDataTable>
+        </tbody>
+      </table>
+    </div>
+    {{else}}
+      <Auk::Panel>
+        <Auk::Panel::Body>
+          <Auk::EmptyState
+            @message={{t "no-results-found"}}
+          />
+        </Auk::Panel::Body>
+      </Auk::Panel>
+    {{/if}}
+  </div>
 </div> 
+<div>
+  <hr />
+</div>
+<div class="auk-u-mx-4">
+  <Auk::Toolbar>
+    <Auk::Toolbar::Group @position="left">
+      <Auk::Toolbar::Item>
+        <Auk::Pagination
+          @page={{this.page}}
+          @size={{this.size}}
+          @nbOfItems={{this.model.length}}
+          @total={{this.model.meta.count}}
+          @onNextPage={{this.nextPage}}
+          @onPreviousPage={{this.prevPage}}
+        />
+      </Auk::Toolbar::Item>
+    </Auk::Toolbar::Group>
+    <Auk::Toolbar::Group @position="right">
+      <Auk::Toolbar::Item>
+        {{t "amount-per-page"}}
+      </Auk::Toolbar::Item>
+      <Auk::Toolbar::Item>
+        <WebComponents::AuPageSize
+          @selectedSize={{this.size}}
+          @onChange={{fn (mut this.size)}}
+        />
+      </Auk::Toolbar::Item>
+    </Auk::Toolbar::Group>
+  </Auk::Toolbar>
+</div>
 {{#if this.showEditCaseModal}}
   <Cases::EditCase
     @onClose={{this.closeEditCaseModal}}
