--- a/app/components/subcase/subcase-titles-panel.hbs
+++ b/app/components/subcase/subcase-titles-panel.hbs
@@ -1,14 +1,16 @@
-{{#if this.isEditing}}
-  <Subcase::SubcaseTitlesPanel::SubcaseTitlesPanelEdit
-    @subcase={{@subcase}}
-    @onCancel={{this.cancelEditing}}
-    @onSave={{this.stopEditing}}
-  />
-{{else}}
-  <Subcase::SubcaseTitlesPanel::SubcaseTitlesPanelView
-    @subcase={{@subcase}}
-    @meeting={{@meeting}}
-    @allowEditing={{@allowEditing}}
-    @onClickEdit={{this.startEditing}}
-  />
-{{/if}}
+<div id="case" class="auk-u-mb-4">
+  {{#if this.isEditing}}
+    <Subcase::SubcaseTitlesPanel::SubcaseTitlesPanelEdit
+      @subcase={{@subcase}}
+      @onCancel={{this.cancelEditing}}
+      @onSave={{this.stopEditing}}
+    />
+  {{else}}
+    <Subcase::SubcaseTitlesPanel::SubcaseTitlesPanelView
+      @subcase={{@subcase}}
+      @meeting={{@meeting}}
+      @allowEditing={{@allowEditing}}
+      @onClickEdit={{this.startEditing}}
+    />
+  {{/if}}
+</div>
