--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-view.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-view.hbs
@@ -1,57 +1,67 @@
-<div class="auk-u-mb-8">
-  <div class="auk-u-mb-2">
-    <div class="auk-o-flex auk-o-flex--vertical-center">
-      <h2 class="auk-overline" data-test-subcase-titles-type>
-        {{#if (is-nota @subcase.agendaItemType)}}
-          {{t "note"}}
-        {{else}}
-          {{t "text"}}
+<div {{did-update (perform this.loadAgendaData)}}>
+  <Auk::Panel data-test-subcase-description-panel>
+    <Auk::Panel::Header>
+      <Auk::Toolbar>
+        <Auk::Toolbar::Group @position="left">
+          <Auk::Toolbar::Item>
+            <div class="au-u-flex au-u-flex--spaced-small">
+              <h4 class="auk-panel__title">
+                {{#if (is-nota @subcase.agendaItemType)}}
+                  {{t "note"}}
+                {{else}}
+                  {{t "text"}}
+                {{/if}}
+              </h4>
+              {{#if @allowEditing}}
+                {{#if @subcase.confidential}}
+                  <AuPill @size="small" @skin="warning" @icon="lock-closed">{{t "limited-access"}}</AuPill>
+                {{/if}}
+              {{/if}}
+            </div>
+          </Auk::Toolbar::Item>
+        </Auk::Toolbar::Group>
+        {{#if @allowEditing}}
+          <Auk::Toolbar::Group @position="right">
+            <Auk::Toolbar::Item>
+              <AuButton
+                data-test-subcase-description-edit
+                @skin="naked"
+                @icon="pencil"
+                {{on "click" @onClickEdit}}
+              >
+                {{t "edit"}}
+              </AuButton>
+            </Auk::Toolbar::Item>
+          </Auk::Toolbar::Group>
         {{/if}}
-      </h2>
-      {{#if @allowEditing}}
-        <div class="auk-u-ml-2">
-          <AuButton
-            data-test-subcase-titles-edit
-            @skin="link"
-            {{on "click" @onClickEdit}}
-          >
-            {{t "edit"}}
-          </AuButton>
+      </Auk::Toolbar>
+    </Auk::Panel::Header>
+    <Auk::Panel::Body>
+      <div class="auk-u-mb-2">
+        <AuHeading @level="4" @skin="3">{{capitalize @subcase.shortTitle}}</AuHeading>
+        {{#if @subcase.title}}
+        <p class="au-u-medium">{{capitalize @subcase.title}}</p>
+        {{/if}}
+      </div>
+      {{#if (is-nota @subcase.agendaItemType)}}
+        <div class="auk-u-mb-2">
+          {{#if @subcase.subcaseName}}
+            <AuPill data-test-subcase-titles-panel-subcase-name @size="small" @skin={{this.pillSkin}}>
+              {{!capitalization using helper instead of css class:
+                because of `display: inline-flex` property of AuPill
+                it is not affected by the `::first-letter` selector
+                used in the auk-u-text-capitalize class }}
+              {{capitalize @subcase.subcaseName}}
+            </AuPill>
+          {{/if}}
         </div>
       {{/if}}
-    </div>
-  </div>
-
-  <div class="auk-u-mb-2">
-    <h4 class="auk-h3">
-      <pre class="auk-u-text-pre-line">
-        {{@subcase.shortTitle}}
-      </pre>
-    </h4>
-  </div>
-
-  <div class="auk-u-mb-2">
-    <pre class="auk-o-flex--inline auk-u-text-pre-line">
-      {{@subcase.title}}
-    </pre>
-  </div>
-
-  {{#if (is-nota @subcase.agendaItemType)}}
-    <div class="auk-u-mb-2">
-      {{#if @subcase.subcaseName}}
-        <AuPill data-test-subcase-titles-panel-subcase-name @size="small" @skin={{this.pillSkin}}>
-          {{!capitalization using helper instead of css class:
-            because of `display: inline-flex` property of AuPill
-            it is not affected by the `::first-letter` selector
-            used in the auk-u-text-capitalize class }}
-          {{capitalize @subcase.subcaseName}}
-        </AuPill>
-      {{/if}}
-    </div>
-  {{/if}}
-  <div class="auk-u-mb-2">
-    <div class="pill-container auk-o-flex">
-      <Utils::ConfidentialityPill @confidential={{@subcase.confidential}} />
-    </div>
-  </div>
+    </Auk::Panel::Body>
+  </Auk::Panel>
 </div>
+
+
+
+  
+
+  
