--- a/app/templates/cases/case/subcases/subcase.hbs
+++ b/app/templates/cases/case/subcases/subcase.hbs
@@ -19,54 +19,60 @@
       @onOpen={{this.openSideNav}}
     >
       <ul>
-        {{#each this.model.decisionmakingFlow.subcases as |subcase|}}
-        <li class="auk-sidebar__item auk-sidebar__item--styled {{if (eq this.model.id subcase.id) "auk-sidebar__item--active"}}">
-          <LinkTo 
-            @route="cases.case.subcases.subcase.index"
-            @models={{array this.model.decisionmakingFlow.id subcase}}
-          >
-            <div class="auk-sidebar__label au-u-flex au-flex--vertical-center au-u-flex--spaced-tiny">
-              {{#if subcase.approved}}
-              <AuBadge
-                @size="small"
-                @icon="check"
-                @skin="success"
-              />
-              {{else}}
+        {{#if this.model.decisionmakingFlow.subcases}}
+          {{#each this.model.decisionmakingFlow.subcases as |subcase|}}
+          <li class="auk-sidebar__item auk-sidebar__item--styled {{if (eq this.model.id subcase.id) "auk-sidebar__item--active"}}">
+            <LinkTo 
+              @route="cases.case.subcases.subcase.index"
+              @models={{array this.model.decisionmakingFlow.id subcase}}
+            >
+              <div class="auk-sidebar__label au-u-flex au-flex--vertical-center au-u-flex--spaced-tiny">
+                {{#if subcase.approved}}
                 <AuBadge
                   @size="small"
-                  @icon="sitemap"
-                  @skin="warning"
+                  @icon="check"
+                  @skin="success"
                 />
+                {{else}}
+  
+                {{/if}}
+                <strong>
+                  {{capitalize subcase.shortTitle}}
+                </strong>
+              </div>
+              <div class="auk-sidebar__sublabel au-u-margin-top-none">
+                Laatste wijziging op {{datetime subcase.modified}}
+              </div>
+              {{#if subcase.type}}
+              <div class="au-u-margin-top-tiny">
+                <AuPill @size="small" @skin="ongoing">{{capitalize subcase.type.label}}</AuPill>
+              </div>
               {{/if}}
-              <strong>
-                {{subcase.shortTitle}}
-              </strong>
-            </div>
-            <div class="auk-sidebar__sublabel">
-              {{datetime subcase.modified}}
-            </div>
-          </LinkTo>
-        </li>
-        {{else}}
-        {{/each}}
+            </LinkTo>
+          </li>
+          {{/each}}
+        {{/if}}
       </ul>
     </Subcases::SideNav>
   </div>
-  <div class="auk-panel-layout__main-content auk-scroll-wrapper__body">
-    {{#if this.model.decisionmakingFlow.subcases}}
-    <Subcases::SubcaseHeader
-      @subcase={{this.model}}
-      @onMoveSubcase={{this.refreshSubcases}}
-      @onProposedForAgenda={{this.refreshSubcases}}
-    />
-    <div class="auk-u-m-4">
-      {{outlet}}
-    </div>
-    {{else}}
-    <div class="auk-u-m-4">
-      <Auk::EmptyState @message={{t "no-subcases"}} />
-    </div>
-    {{/if}}
+  <div class="auk-panel-layout__main-content">
+    <AuBodyContainer>
+      {{#if this.model.decisionmakingFlow.subcases}}
+      <Subcases::SubcaseHeader
+        @subcase={{this.model}}
+        @onMoveSubcase={{this.refreshSubcases}}
+        @onProposedForAgenda={{this.refreshSubcases}}
+      />
+      <AuBodyContainer @scroll={{true}}>
+        <div class="auk-u-m-4 js-subcase-nav-observer">
+          {{outlet}}
+        </div>
+      </AuBodyContainer>
+      {{else}}
+      <div class="auk-u-m-4">
+        <Auk::EmptyState @message={{t "no-subcases"}} />
+      </div>
+      {{/if}}
+    </AuBodyContainer>
   </div>
 </div>
